// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero Section Components renders Container properly 1`] = `
<div
  class="sc-gsDKAQ cToFAP"
>
  Teste
</div>
`;

exports[`Hero Section Components renders HeroSection properly 1`] = `
<div
  class="sc-bdvvtL gmKzVj"
>
  Teste
</div>
`;
